--- a/index.html
+++ b/index.html
@@ -1,80 +1,221 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="styles.css">
+
   <title>Frontend Mentor | Time tracking dashboard</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
-
-  Report for
-  Jeremy Robson
-
-  Daily
-  Weekly
-  Monthly
-
-  Work
-  5hrs <!-- daily -->
-  Previous - 7hrs <!-- daily -->
-  32hrs <!-- weekly -->
-  Previous - 36hrs <!-- weekly -->
-  103hrs <!-- monthly -->
-  Previous - 128hrs <!-- monthly -->
-
-  Play
-  1hr <!-- daily -->
-  Previous - 2hrs <!-- daily -->
-  10hrs <!-- weekly -->
-  Previous - 8hrs <!-- weekly -->
-  23hrs <!-- monthly -->
-  Previous - 29hrs <!-- monthly -->
-
-  Study
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 7hrs <!-- weekly -->
-  13hrs <!-- monthly -->
-  Previous - 19hrs <!-- monthly -->
-
-  Exercise
-  1hr <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  4hrs <!-- weekly -->
-  Previous - 5hrs <!-- weekly -->
-  11hrs <!-- monthly -->
-  Previous - 18hrs <!-- monthly -->
-
-  Social
-  1hr <!-- daily -->
-  Previous - 3hrs <!-- daily -->
-  5hrs <!-- weekly -->
-  Previous - 10hrs <!-- weekly -->
-  21hrs <!-- monthly -->
-  Previous - 23hrs <!-- monthly -->
-
-  Self Care
-  0hrs <!-- daily -->
-  Previous - 1hr <!-- daily -->
-  2hrs <!-- weekly -->
-  Previous - 2hrs <!-- weekly -->
-  7hrs <!-- monthly -->
-  Previous - 11hrs <!-- monthly -->
-
-  
+  <div class="wrapper">
+    <div class="card">
+      <div>
+        Report for
+        Jeremy Robson
+      </div>
+      <div>
+        Daily
+        Weekly
+        Monthly
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Work
+      </div>
+      <div>
+        5hrs
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 7hrs
+        <!-- daily -->
+      </div>
+      <div>
+        32hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 36hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        103hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 128hrs
+        <!-- monthly -->
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Play
+      </div>
+      <div>
+        1hr
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 2hrs
+        <!-- daily -->
+      </div>
+      <div>
+        10hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 8hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        23hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 29hrs
+        <!-- monthly -->
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Study
+      </div>
+      <div>
+        0hrs
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 1hr
+        <!-- daily -->
+      </div>
+      <div>
+        4hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 7hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        13hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 19hrs
+        <!-- monthly -->
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Exercise
+      </div>
+      <div>
+        1hr
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 1hr
+        <!-- daily -->
+      </div>
+      <div>
+        4hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 5hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        11hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 18hrs
+        <!-- monthly -->
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Social
+      </div>
+      <div>
+        1hr
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 3hrs
+        <!-- daily -->
+      </div>
+      <div>
+        5hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 10hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        21hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 23hrs
+        <!-- monthly -->
+      </div>
+    </div>
+    <div class="card">
+      <div>
+        Self Care
+      </div>
+      <div>
+        0hrs
+        <!-- daily -->
+      </div>
+      <div>
+        Previous - 1hr
+        <!-- daily -->
+      </div>
+      <div>
+        2hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        Previous - 2hrs
+        <!-- weekly -->
+      </div>
+      <div>
+        7hrs
+        <!-- monthly -->
+      </div>
+      <div>
+        Previous - 11hrs
+        <!-- monthly -->
+      </div>
+    </div>
+  </div>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 </body>
+
 </html>
